--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,12 @@ jobs:
         run:  dotnet test ./tests/NKZSoft.Template.Application.Tests --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
       - name: REST Test
         run:  dotnet test ./tests/NKZSoft.Template.Presentation.REST.Tests --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
+      - name: GraphQL Test
+        run:  dotnet test ./tests/NKZSoft.Template.Presentation.GraphQL.Tests --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
+      - name: SignalR Test
+        run:  dotnet test ./tests/NKZSoft.Template.Presentation.SignalR.Tests --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
+#      - name: GRPC Test
+#        run:  dotnet test ./tests/NKZSoft.Template.Presentation.GRPC.Tests --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
