--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,13 @@ on:
     - main
     - f/*
     - fix/*
-
+    paths-ignore:
+      - "README.md"
+  pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - "README.md"
 jobs:
   build:
     runs-on: ubuntu-latest
